[tool.poetry]
name = "korean-blog-extractor"
version = "0.1.0"
description = ""
authors = ["Michael Kang <michael3dk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pyyaml = "^6.0.1"
feedparser = "^6.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
